--- a/vercel-serverless/frontend/public/offline.html
+++ b/vercel-serverless/frontend/public/offline.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Offline - MusicMu</title>
+  <title>Offline - Cantio</title>
   <style>
     * {
       margin: 0;
@@ -69,7 +69,7 @@
     <h1>You're Offline</h1>
     <p>
       It looks like you've lost your internet connection. 
-      MusicMu needs an active connection to stream music.
+      Cantio needs an active connection to stream music.
     </p>
     <button class="retry-btn" onclick="window.location.reload()">
       Try Again
